<resources>
    <string name="app_name">bello</string>
    <string name="hint_email">Email</string>
    <string name="button_login">Login</string>
    <string name="sign_upText">No account? SignUp</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="button_signUp">Sign Up</string>
    <string name="login_text">Already have an account? Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="hint_search">Search</string>
    <string name="button_logout">LOGOUT</string>
    <string name="new_activity">to write new activities</string>
    <string name="home_titlebar">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password_reset_textView">Forgot Password? Reset</string>
    <string name="reset_button">RESET</string>
    <string name="login_text_if">Login</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="the_app_logo_title">the app logo title</string>
    <string name="login">Login</string>
    <string name="phone">Phone</string>
    <string name="todo">TODO</string>
    <string name="submit">Submit</string>
    <string name="remember_password_login">Remember password? Login</string>
    <string name="next">Next</string>
    <string name="signOut">SignOut</string>
    <string name="broadcast_fragment">BroadCast Fragment</string>
    <string name="chat_fragment">Chat Fragment</string>
    <string name="status_fragment">Status Fragment</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="settings">Settings</string>
    <string name="aditya_roshan_jha">Aditya Roshan Jha</string>
    <string name="adityrjha_gmail_com">adityrjha@gmail.com</string>
    <string name="back">Back</string>
    <string name="apply">Apply</string>
    <string name="i_love_belloing">I love belloing!!</string>
    <string name="password">Password</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="alternative_email">Alternative Email</string>
    <string name="_150">150</string>
</resources>