<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">


    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/profile"
                android:title="@string/profile_settings"
                android:icon="@drawable/ic_baseline_account_circle_24"/>

            <item
                android:id="@+id/account"
                android:title="@string/account_settings"
                android:icon="@drawable/ic_baseline_admin_panel_settings_24"/>
        </menu>
    </item>
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/baseline_logout_black_48"/>

    <item
        android:id="@+id/back"
        android:title="@string/back"
        android:icon="@drawable/ic_baseline_arrow_back_24"/>

</menu>