<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:src="@drawable/title"
                style="@style/FormImage"
                android:contentDescription="@string/todo"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailFTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:layout_below="@id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/grid_2x">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailFET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/light_black_transparent"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_submit"
                style="@style/StandardFormButton"
                android:layout_below="@+id/emailFTIL"
                android:layout_marginStart="@dimen/grid_2x"
                android:layout_marginTop="-333dp"
                android:layout_marginEnd="@dimen/grid_2x"
                android:layout_marginBottom="@dimen/grid_2x"
                android:text="@string/submit" />

            <TextView
                android:id="@+id/signUpFTV"
                style="@style/LinkText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_submit"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/grid_2x"
                android:layout_marginTop="@dimen/grid_2x"
                android:layout_marginEnd="@dimen/grid_2x"
                android:layout_marginBottom="@dimen/grid_2x"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/sign_upText"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/loginFTV"
                style="@style/LinkText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/signUpFTV"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/grid_2x"
                android:layout_marginTop="@dimen/grid_2x"
                android:layout_marginEnd="@dimen/grid_2x"
                android:layout_marginBottom="@dimen/grid_2x"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/remember_password_login"
                tools:ignore="TouchTargetSizeCheck" />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="222dp"
        android:layout_height="222dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/nestedScrollView"
        app:layout_constraintEnd_toEndOf="@+id/nestedScrollView"
        app:layout_constraintStart_toStartOf="@+id/nestedScrollView"
        app:layout_constraintTop_toTopOf="@+id/nestedScrollView"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>