<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/grid_2x"
                android:contentDescription="@null"
                android:src="@drawable/title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/grid_2x">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/light_black_transparent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/usernameTIL"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/grid_2x">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/light_black_transparent" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_next"
                style="@style/StandardButton"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:layout_below="@+id/passwordTIL"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/grid_2x"
                android:text="@string/next" />

            <TextView
                android:id="@+id/loginTV"
                style="@style/LinkText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_next"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/grid_2x"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/login_text" />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="222dp"
        android:layout_height="222dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/nestedScrollView"
        app:layout_constraintEnd_toEndOf="@+id/nestedScrollView"
        app:layout_constraintStart_toStartOf="@+id/nestedScrollView"
        app:layout_constraintTop_toTopOf="@+id/nestedScrollView"
        tools:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>