<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forEnterPasswordFragment"
    android:layout_gravity="center"
    android:layout_width="270dp"
    android:layout_height="300dp"
    android:background="@color/light_black_transparent"
    tools:context=".fragments.EnterPasswordFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEnterTIL"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/grid_2x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEnterET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/light_green"
            android:textColorHint="@color/light_green_transparent"
            tools:ignore="TouchTargetSizeCheck" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonOK"
        android:layout_width="80dp"
        android:layout_height="@dimen/standard_height"
        android:background="@color/light_green"
        android:text="@string/OK"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEnterTIL"
        app:layout_constraintVertical_bias="0.6"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="80dp"
        android:layout_height="@dimen/standard_height"
        android:layout_marginEnd="32dp"
        android:background="@color/light_green"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.784"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/emailTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:textSize="14sp"
        android:textColor="@color/light_green"
        app:layout_constraintBottom_toTopOf="@+id/passwordEnterTIL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>