<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.ChangeProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilePIC"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/aditya"
        android:layout_marginEnd="16dp"
        app:civ_border_color="@color/white_alpha"
        app:civ_border_width="@dimen/grid_1x"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999" />

    <TextView
        android:id="@+id/bio"
        android:layout_width="200dp"
        android:elevation="@dimen/grid_2x"
        android:maxLength="150"
        android:text="@string/i_love_belloing"
        android:textColor="@color/light_green"
        android:gravity="center_horizontal"
        android:textSize="17sp"
        android:clickable="true"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePIC"
        app:layout_constraintVertical_bias="0.108"
        android:focusable="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameTIL"
        android:layout_width="@dimen/standard_width"
        android:layout_height="@dimen/standard_height"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/grid_2x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bio"
        app:layout_constraintVertical_bias="0.088">

         <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userNameET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColor="@color/light_green"
            android:textColorHint="@color/light_green_transparent"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/changeEmailTIL"
        android:layout_width="@dimen/standard_width"
        android:layout_height="@dimen/standard_height"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/grid_2x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameTIL"
        app:layout_constraintVertical_bias="0.057">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/changeEmailET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/light_green"
            android:textColorHint="@color/light_green_transparent"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonApply"
        style="@style/StandardFormButton"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeEmailTIL"
        app:layout_constraintVertical_bias="0.22" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:elevation="@dimen/grid_4x"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        android:contentDescription="@string/todo" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/takePicFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:borderWidth="@dimen/grid_1by2x"
        app:elevation="@dimen/grid_3x"
        app:layout_constraintBottom_toBottomOf="@+id/profilePIC"
        app:layout_constraintEnd_toEndOf="@+id/profilePIC"
        app:layout_constraintHorizontal_bias="0.993"
        app:layout_constraintStart_toStartOf="@+id/profilePIC"
        app:layout_constraintTop_toTopOf="@+id/profilePIC"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/camera"
        android:contentDescription="@string/todo" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>